          to identify how vchkpw was called.
	- ./configure tells status of onchange script setting
	- Fix rights problem with alias commands.  -  thanks Alessio Cecchi
	- Only report out of order entries when sorting files once per file
	- make pop syslog ./configure setting report itself like the rest of the choices
	- Make error messages more consistant (P/O checking Jonathan's bug report)

        Bill Shupp
	- enable-onchange-script defaults to no.  
	  NOTE: Still need to supress error message if file not found.
        - Fix bug in output format of list_alias
	- Remove unneeded AC_DEFINE_UNQUOTED from ONCHANGE_SCRIPT in configure
	- Port remaining spamassassin code from 5.5 branch to stable-5_4.
	- Add new --enable-maildrop option, and new NO_MAILDROP bit flag. 
	- New Documentation: README.maildrop, README.spamassassin
	- Sample maildroprc files for both 1.x and 2.x (maildrop/*)

	Fabio Busatto
	- #include <stdio.h> at top of vpopmail.h


	blaze_cs
	- Ldap back end reads config parms from a file at runtime. [1056529][1476647]

5.4.18 - released 30-Dec-06

        Joshua Megerman (offsides)
        - SQL backend fixes - NOTE: Requires database changes.  
          See UPGRADE for 5.4.18.  [1619489]
        - MySQL Tablename Backquotes - Add back quotes around table
          names so MySQL will allow names that start with a digit.
          [1619491]

	Drew
	- add .qmail-extension ability to vdelivermail
	- mods to Delivered-To: header to support .qmail-extension

	John Simpson
	- onchange - call a script when users or domains are changed
          see README.onchange.
        - cslogin - Compact and silent login options for vpopmaild
          note: don't blame John for problems in this, I changed a
          lot to make it fit with other changes. rww

	Tijs Zwinkels
	- vmysql: add missing mysql_free_result to fix mem leak.

	Tom Collins
	- vdelivermail: Add missing loop check.
	- vchangepw: Minor changes to Peter's error checking. [1573277]
